--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,5 +11,11 @@
   "cart": {
     "title": "My cart"
   },
-  "product": "Product"
+  "product": "Product",
+  "error": {
+    "genericError": "An error occurred: {{error}}",
+    "quantityLimit_one": "Only 1 unit is available",
+    "quantityLimit_other": "Only {{count}} units are available",
+    "removedFromCart": "{{name}} is no longer available and has been removed from cart"
+  }
 }
