--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,6 +12,17 @@
     "title": "My cart"
   },
   "product": "Product",
+  "validations": {
+    "emailRequired": "Email address is required",
+    "firstNameRequired": "First name is required",
+    "lastNameRequired": "Last name is required",
+    "addressRequired": "Address is required",
+    "apartmentRequired": "Apartment is required",
+    "cityRequired": "City is required",
+    "stateRequired": "State is required",
+    "zipCodeRequired": "Zip code is required",
+    "emailInvalid": "Email address is invalid"
+  },
   "error": {
     "genericError": "An error occurred: {{error}}",
     "quantityLimit_one": "Only 1 unit is available",
