--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,5 +1,6 @@
 {
   "buyNow": "Buy now",
+  "confirmOrder": "Confirm Order",
   "itemCount_one": "({{count}} item)",
   "itemCount_other": "({{count}} items)",
   "offerPrice": "Offer price: ${{offerPrice}}",
@@ -27,7 +28,12 @@
     "genericError": "An error occurred: {{error}}",
     "quantityLimit_one": "Only 1 unit is available",
     "quantityLimit_other": "Only {{count}} units are available",
-    "removedFromCart": "{{name}} is no longer available and has been removed from cart"
+    "removedFromCart": "{{name}} is no longer available and has been removed from cart",
+    "noInternetConnection": "No Internet Connection",
+    "networkError": "Network Error"
+  },
+  "order": {
+    "successfullyPlaced": "Order has been successfully placed"
   },
   "checkout": "Checkout",
   "contact": "Contact",
